--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,22 @@
     }
 
     h1 {
-        @apply text-5xl;
+        @apply text-3xl;
+    }
+
+    h2 {
+        @apply text-2xl;
+    }
+
+    h3 {
+        @apply text-xl;
+    }
+
+    h4 {
+        @apply text-lg;
+    }
+
+    h5 {
+        @apply text-base;
     }
 }
