--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,10 @@
         @apply flex h-full flex-col items-center justify-center overflow-hidden rounded-md border border-chathams-blue-200 bg-white/75 shadow-xl;
     }
 
+    .story-card-grid {
+        @apply grid grid-cols-1 justify-items-center gap-4 md:grid-cols-2 lg:grid-cols-4 lg:justify-items-start xl:grid-cols-6;
+    }
+
     .story-popup {
         @apply select-none rounded-lg bg-black bg-opacity-50 p-4 text-center text-xs text-white transition duration-100 md:text-[8pt] lg:text-base 2xl:text-xl;
     }
