--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@
     }
 
     .story-card-grid {
-        @apply grid grid-cols-1 justify-items-center gap-4 md:grid-cols-2 lg:grid-cols-4 lg:justify-items-start xl:grid-cols-6;
+        @apply grid grid-cols-1 justify-items-center gap-4 md:grid-cols-2 lg:grid-cols-4 lg:justify-items-start 2xl:grid-cols-5;
     }
 
     .story-popup {
